cmake_minimum_required(VERSION 3.17)

project(ScratchCatchRecreation)

add_executable(${PROJECT_NAME} main.cpp)

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL2 REQUIRED)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED)
find_package(SDL_ttf REQUIRED)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS} ${SDL_TTF_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES} ${SDL_TTF_LIBRARIES})
